--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body .light-btn {
 
 
 .navbar {
-  background-color: #ffffff;
   box-shadow: 0px 4px 14px #0000001a;
 }
 .dark-btn img,
